bin/debug/log.txt
[1mmain.cpp:14:19: [0m[0;1;31merror: [0m[1muse of undeclared identifier 'complex'[0m
   14 |     Eigen::Matrix<complex<[0;34mdouble[0m>,Eigen::Dynamic,Eigen::Dynamic> A([0;32m2[0m, [0;32m2[0m);[0m
      | [0;1;32m                  ^
[0m1 error generated.
